<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/logo_lay"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:id="@+id/signin_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/signup_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/otp"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="30dp"
                        android:textStyle="italic" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/sign_in_line" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signin_lay"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edt_bgd"
                    android:hint="@string/please_enter_otp"
                    android:padding="18dp"
                    android:textCursorDrawable="@drawable/white_cursor"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/light_gray" />



                <TextView
                    android:id="@+id/resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/edt_otp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/resend"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/continue_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/resend_otp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_bgd"
                    android:gravity="center"
                    android:padding="18dp"
                    android:text="@string/continue_"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize_sp20"
                    android:textStyle="bold" />


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>