<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/topimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/login_img" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topimage"
                android:layout_marginLeft="@dimen/margin_dp30"
                android:textCursorDrawable="@drawable/white_cursor"
                android:layout_marginRight="@dimen/margin_dp30"
                android:layout_marginTop="@dimen/margin_dp15"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/message"
                android:drawablePadding="@dimen/padding_dp10"
                android:hint="@string/enter_email"
                android:padding="@dimen/padding_dp10"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:singleLine="true"
                android:textSize="@dimen/textsize_sp15" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/email"
                android:layout_marginLeft="@dimen/margin_dp30"
                android:layout_marginRight="@dimen/margin_dp30"
                android:layout_marginTop="@dimen/margin_dp5"
                android:background="@color/white"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_marginLeft="@dimen/margin_dp30"
                android:layout_marginRight="@dimen/margin_dp30"
                android:textCursorDrawable="@drawable/white_cursor"
                android:layout_marginTop="@dimen/margin_dp15"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/user"
                android:inputType="textPassword"
                android:drawablePadding="@dimen/padding_dp10"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/enter_your_password"
                android:padding="@dimen/padding_dp10"
                android:singleLine="true"
                android:textSize="@dimen/textsize_sp15" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/password"
                android:layout_marginLeft="@dimen/margin_dp30"
                android:layout_marginRight="@dimen/margin_dp30"
                android:layout_marginTop="@dimen/margin_dp5"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/view2"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_marginRight="@dimen/margin_dp20"
                android:text="@string/forgot_your_password"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/forgot_password"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/margin_dp30"
                android:layout_marginRight="@dimen/margin_dp30"
                android:background="@drawable/btn_bgd_trans"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_sp20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sign_in"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding_dp10"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_sp16" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/or"
                android:layout_marginTop="@dimen/margin_dp5"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view3">

                <TextView
                    android:id="@+id/loginwith_social"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_dp20"
                    android:layout_marginLeft="@dimen/margin_dp30"
                    android:layout_marginTop="@dimen/margin_dp15"
                    android:text="Sign Up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_sp15" />

                <ImageView
                    android:id="@+id/next_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_dp30"
                    android:layout_marginTop="@dimen/margin_dp15"
                    android:src="@drawable/right_arrow" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>