<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="60dp"
                android:background="@color/transparent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lock_icon"
                    android:layout_marginTop="-80dp"
                    android:background="@color/white"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="80dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/verification_required"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/textsize_sp22"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/verification_text" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/lock_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:src="@drawable/lock_icon" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/learn_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/learn_more_btn" />

            <TextView
                android:id="@+id/verify_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bgd"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/verify_identity"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/margin_dp18"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>